--- a/Projects/Cronus/Cronus/Cronus.csproj
+++ b/Projects/Cronus/Cronus/Cronus.csproj
@@ -103,6 +103,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\BaseColors.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\PageEdit.xaml.cs">
