Changes to navigation
Navigation now works with the SelectedIndex of the Menu Control, Binding to the viewmodel and the navigationhandler can change pages just with the index

--- a/Projects/Cronus/Cronus/Cronus.csproj
+++ b/Projects/Cronus/Cronus/Cronus.csproj
@@ -69,6 +69,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Logic\NavigationHandler.cs" />
+    <Compile Include="Models\ProjectModel.cs" />
     <Compile Include="ViewModels\BaseNotifier.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Page Include="MainWindow.xaml">
