--- a/Projects/Cronus/Cronus/packages.config
+++ b/Projects/Cronus/Cronus/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
   <package id="MahApps.Metro" version="2.4.7" targetFramework="net472" />
+  <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
