--- a/Projects/Cronus/Cronus/Cronus.csproj
+++ b/Projects/Cronus/Cronus/Cronus.csproj
@@ -255,5 +255,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
