--- a/Projects/Cronus/Cronus/Cronus.csproj
+++ b/Projects/Cronus/Cronus/Cronus.csproj
@@ -170,8 +170,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DragableElements\ZPLElementRectangleBox.xaml.cs">
+      <DependentUpon>ZPLElementRectangleBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\BaseNotifier.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
+    <Page Include="DragableElements\ZPLElementRectangleBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
