--- a/Projects/Cronus/Cronus/Cronus.csproj
+++ b/Projects/Cronus/Cronus/Cronus.csproj
@@ -173,9 +173,16 @@
     <Compile Include="DragableElements\ZPLElementRectangleBox.xaml.cs">
       <DependentUpon>ZPLElementRectangleBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DragableElements\ZPLElementText.xaml.cs">
+      <DependentUpon>ZPLElementText.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\BaseNotifier.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Page Include="DragableElements\ZPLElementRectangleBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="DragableElements\ZPLElementText.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -228,6 +235,7 @@
     <Resource Include="ReadMeCronusConcept.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Interfaces\" />
     <Folder Include="Logic\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
